EuiRange and EuiDualRange fixes (#1580)
* EuiRange bug fixing

- Give the inputs a min-width in case of single digits. And remove shifting of inputs because they then don’t line up with other form rows
- Custom tick values now properly account for minimum value
- Fix styling of track color when not showing the range
- Top level `className` should be applied to the top level wrapper
- Better error handling of invalid steps/ticks

* Fixed validations

* Update docs page by splitting up examples

- Also fixed prepend/append of value

* Working commit:

Not worrying about what handle was clicked…

* Handle invalid alternative

* Bug fix: Dual range inputs account for both min and max for sizing

* range tooltip no shrink

* Fixed color of selected & disabled dual range handles

* remove console.log

* Only auto-move invalid handles

* Revert icon snaps

* Created more jest tests

* cl

* handle keyboard value changes when values are intially empty

* Remove unneeded check

* Using var for snippet replacement props

--- a/src/components/form/range/_range_tooltip.scss
+++ b/src/components/form/range/_range_tooltip.scss
@@ -49,14 +49,11 @@
 
   // Positions the arrow
   &.euiRangeTooltip__value--right {
-    transform: translateX(0) translateY(-50%);
     margin-left: $euiSizeL;
 
     &:before,
     &:after {
-      bottom: 50%;
       left: $arrowMinusSize;
-      transform: translateY(50%) rotateZ(45deg);
     }
 
     &::before {
@@ -65,19 +62,27 @@
   }
 
   &.euiRangeTooltip__value--left {
-    transform: translateX(-100%) translateY(-50%);
-    margin-left: -$euiSizeL;
+    margin-right: $euiSizeL;
 
     &:before,
     &:after {
-      bottom: 50%;
       left: auto;
       right: $arrowMinusSize;
-      transform: translateY(50%) rotateZ(45deg);
     }
 
     &::before {
       margin-right: -1px;
+    }
+  }
+
+  &.euiRangeTooltip__value--right,
+  &.euiRangeTooltip__value--left {
+    transform: translateX(0) translateY(-50%);
+
+    &:before,
+    &:after {
+      bottom: 50%;
+      transform: translateY(50%) rotateZ(45deg);
     }
   }
 
